# Ustatistics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  U.c  U.h  concrete.c  makefile2  random.c  regressionLearner.c  regressionLearner.h  running.c  running.h
R/: #test.R#  .#test.R  test.R
concreteDatasetExample/: CMakeLists.txt  main.c
core/: CMakeLists.txt  CMakeSettings.json  U.c  U.h  binomCoeff.c  binomCoeff.h  regressionLearner.c  regressionLearner.h  runningStats.c  runningStats.h  supervisedLearning.c  supervisedLearning.h
enc_temp_folder/16782ebc69278f2fc1fdd7882ea2f25/: U.c
enc_temp_folder/21573dc8eaab3dfa3a14534e97b9bd/: concrete.c
enc_temp_folder/d1a511851d10d2f1f2de75ae69b3dbf/: supervisedLearning.c
randomGaussianExample/: CMakeLists.txt  main.c
regression/: CMakeLists.txt  supervisedLearning.c
standardExamplesUstatistics/: CMakeLists.txt  centralFourthMoment.c  mean.c  variance.c
